k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: room404web

spec:
  replicas: 1

  selector:
    matchLabels:
      app: room404web

  template:

    metadata:
      labels:
        app: room404web

    spec:

      containers:
      - name: room404web

        image: default-route-openshift-image-registry.apps.okd.example.com/room404web/room404web:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80
