k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: room404web-route
spec:
  to:
    kind: Service
    name: room404web-service


  port:
    targetPort: 80
